--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
+@import "variables";
+
+@import "bootstrap";
+
 html,
 body {
   padding: 0;
